# jenova

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  api.py  app.py  conftest.py  pyproject.toml  requirements.txt  test_jenova.py
demo/: app.py
demo/templates/: index.html
docs/: conf.py  index.rst
src/jenova/: api.py  orm.py
templates/: index.html
tests/: conftest.py  test_jenova.py
