[tool.poetry]
name = "jenova"
version = "0.1.0"
description = ""
authors = ["Tobi-De <tobidegnon@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
WebOb = "^1.8.7"
parse = "^1.19.0"
requests = "^2.27.1"
requests-wsgi-adapter = "^0.4.1"
Jinja2 = "^3.0.3"
whitenoise = "^6.0.0"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
poetryup = "^0.6.1"
mypy = "^0.942"
black = "^22.3.0"
pre-commit = "^2.18.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
