[tool.poetry]
name = "jenova"
version = "0.1.0"
description = "Web framework built for learning purpose"
authors = ["Tobi-De <tobidegnon@protonmail.com>"]
packages = [
    { include = "jenova", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^21.2.0"
WebOb = "^1.8.7"
parse = "^1.19.1"
requests = "^2.31.0"
requests-wsgi-adapter = "^0.4.1"
Jinja2 = "^3.1.2"
whitenoise = "^6.6.0"
httpx = "^0.25.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ipython = "^8.17.2"
poethepoet = "^0.24.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
shibuya = "^2023.10.26"
sphinx-autobuild = "^2021.3.14"
sphinx-click = "^5.0.1"

[tool.poe.tasks]
serve-docs = "sphinx-autobuild docs docs/_build/html --port 8080"
run-demo = "gunicorn demo.app:app"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E501", "E741"] # temporary

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".github",
    ".hg",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "migrations",
    "node_modules",
    "static",
]

per-file-ignores = { }

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
